cloud-course restructure database, add constraints, refactor and clean code and logic