@@ -2,7 +2,7 @@ package com.fypgrading.adminservice.service;
 
 import com.fypgrading.adminservice.entity.*;
 import com.fypgrading.adminservice.repository.GradeRepository;
-import com.fypgrading.adminservice.repository.ReviewerTeamRepository;
+import com.fypgrading.adminservice.repository.TeamReviewerRepository;
 import com.fypgrading.adminservice.service.client.EvaluationClient;
 import com.fypgrading.adminservice.service.dto.*;
 import com.fypgrading.adminservice.service.enums.AssessmentEnum;
@@ -14,95 +14,84 @@ import com.fypgrading.adminservice.service.mapper.TeamMapper;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
 public class GradeService {
 
-    private final com.fypgrading.adminservice.service.EventDispatcher eventDispatcher;
-    private final ReviewerTeamRepository reviewerTeamRepository;
-    private final EvaluationClient evaluationClient;
-    private final AssessmentService assessmentService;
-    private final AssessmentMapper assessmentMapper;
-    private final ReviewerService reviewerService;
+    private final TeamReviewerRepository teamReviewerRepository;
     private final GradeRepository gradeRepository;
-    private final ReviewerMapper reviewerMapper;
+
+    private final AssessmentService assessmentService;
+    private final ReviewerService reviewerService;
     private final TeamService teamService;
+
+    private final AssessmentMapper assessmentMapper;
+    private final ReviewerMapper reviewerMapper;
     private final GradeMapper gradeMapper;
     private final TeamMapper teamMapper;
 
+    private final EventDispatcher eventDispatcher;
+    private final EvaluationClient evaluationClient;
+
     public List<GradeDTO> getGradesByAssessment(String assessmentStr) {
-        AssessmentEnum assessment = AssessmentEnum.valueOf(assessmentStr.toUpperCase());
-        List<Grade> reviewerTeamGrades = gradeRepository.findAllByAssessmentId(assessment.getInstanceId());
+        Assessment assessment = assessmentService.getAssessmentByLowerCaseName(assessmentStr);
+        List<Grade> reviewerTeamGrades = gradeRepository.findAllByAssessmentId(assessment.getId());
         return gradeMapper.toTeamGradeDTOList(reviewerTeamGrades);
     }
 
-    public void testCheckNotification() {
-        eventDispatcher.checkForAdminNotification(
-            new EvaluationSubmittedEvent(null, null)
-        );
-    }
-
     public List<GradedEvaluationDTO> getTeamEvaluationsByAssessment(String assessmentStr, Long teamId) {
-        List<EvaluationDTO> teamEvaluations =
-            evaluationClient.getTeamEvaluationsByAssessment(assessmentStr, teamId);
+        Team team = teamService.getTeamById(teamId);
+
+        List<EvaluationDTO> teamEvaluations = evaluationClient.getTeamEvaluationsByAssessment(assessmentStr, teamId);
 
         Assessment assessment = assessmentService.getAssessmentByLowerCaseName(assessmentStr);
+        List<Grade> assessmentGrades = gradeRepository.findAllByTeamReviewer_TeamIdAndAssessmentId(teamId, assessment.getId());
+        List<Reviewer> assessmentReviewers =
+            teamReviewerRepository.findByTeamIdAndAssessmentId(teamId, assessment.getId())
+                .stream().map(TeamReviewer::getReviewer).toList();
 
-        List<Grade> gradeList =
-                gradeRepository.findAllByTeamReviewer_TeamIdAndAssessmentId(teamId, assessment.getId());
+        // reviewer -> grade
+        Map<Reviewer, Float> reviewerGradeMap = assessmentGrades.stream()
+            .collect(Collectors.toMap(
+                grade -> grade.getTeamReviewer().getReviewer(),
+                Grade::getGrade));
 
-        List<TeamReviewer> teamReviewers =
-                reviewerTeamRepository.findByTeamIdAndAssessmentId(teamId, assessment.getId());
+        // reviewer ID -> graded rubrics
+        Map<UUID, List<GradedRubricDTO>> reviewerIdGradedRubricsMap = teamEvaluations.stream()
+            .collect(Collectors.toMap(
+                EvaluationDTO::getReviewerId,
+                EvaluationDTO::getGradedRubrics));
 
-        System.out.println("teamReviewers: " + teamReviewers);
-
-        if (teamReviewers.isEmpty()) {
-            throw new IllegalStateException("Team reviewers not found!");
-        }
-
-        Team team = teamReviewers.get(0).getTeam();
-        List<Reviewer> reviewers = teamReviewers.stream().map(TeamReviewer::getReviewer).toList();
-
-        List<GradedEvaluationDTO> evaluations = new ArrayList<>();
-        reviewers.stream().map(reviewer -> {
-            Grade grade = gradeList.stream().filter(g -> g.getTeamReviewer().getReviewer().equals(reviewer)).findFirst().orElse(null);
-            EvaluationDTO evaluation = teamEvaluations.stream().filter(e -> e.getReviewerId().equals(reviewer.getId())).findFirst().orElse(null);
-            return new GradedEvaluationDTO(
+        return assessmentReviewers.stream().map(reviewer ->
+            new GradedEvaluationDTO(
                     reviewerMapper.toDTO(reviewer),
                     teamMapper.toDTO(team),
                     assessmentMapper.toDTO(assessment),
-                    evaluation != null ? evaluation.getGradedRubrics() : Collections.emptyList(),
-                    grade != null ? grade.getGrade() : null
-            );
-        }).forEach(evaluations::add);
-
-        return evaluations;
+                    reviewerIdGradedRubricsMap.getOrDefault(reviewer.getId(), List.of()),
+                    reviewerGradeMap.get(reviewer))).toList();
     }
 
-    public GradeDTO submitGrade(GradeIDsDTO gradeIDs) {
+    public GradeDTO submitGrade(GradeIdDTO gradeIdDTO) {
 
-        Assessment assessment = assessmentService.getAssessmentByUpperCaseName(gradeIDs.getAssessment());
-        Reviewer reviewer = reviewerService.getReviewerById(gradeIDs.getReviewerId());
-        Team team = teamService.getTeamById(gradeIDs.getTeamId());
+        Assessment assessment = assessmentService.getAssessmentByUpperCaseName(gradeIdDTO.getAssessment());
+        Reviewer reviewer = reviewerService.getReviewerById(gradeIdDTO.getReviewerId());
+        Team team = teamService.getTeamById(gradeIdDTO.getTeamId());
         TeamDTO teamDTO = teamMapper.toDTO(team);
 
         TeamReviewer teamReviewer =
-                reviewerTeamRepository.findByReviewerIdAndTeamId(reviewer.getId(), team.getId())
+                teamReviewerRepository.findByReviewerIdAndTeamId(reviewer.getId(), team.getId())
                         .orElseThrow(() -> new IllegalArgumentException("Reviewer and Team are not linked!"));
 
         gradeRepository.findByTeamReviewer_ReviewerIdAndTeamReviewer_TeamIdAndAssessmentId(
-                gradeIDs.getReviewerId(), gradeIDs.getTeamId(), assessment.getId()
+                gradeIdDTO.getReviewerId(), gradeIdDTO.getTeamId(), assessment.getId()
         ).ifPresent(foundGrade -> {
             throw new IllegalStateException("Reviewer already submitted evaluation for this team assessment!");
         });
 
-        Grade grade = new Grade(assessment, gradeIDs.getGrade(), teamReviewer);
-
+        Grade grade = new Grade(assessment, gradeIdDTO.getGrade(), teamReviewer);
         Grade createdGrade = gradeRepository.save(grade);
 
         EvaluationSubmittedEvent event = new EvaluationSubmittedEvent(teamDTO, assessmentMapper.toDTO(assessment));
@@ -111,12 +100,9 @@ public class GradeService {
         return gradeMapper.toTeamGradeDTO(createdGrade);
     }
 
-    public List<GradeDTO> getGrades(UUID reviewerId, Long teamId) {
+    public List<GradeDTO> getTeamReviewerGrades(UUID reviewerId, Long teamId) {
         List<Grade> grades =
-                gradeRepository.findAllByTeamReviewer_ReviewerIdAndTeamReviewer_TeamId(
-                        reviewerId, teamId
-                );
-
+                gradeRepository.findAllByTeamReviewer_ReviewerIdAndTeamReviewer_TeamId(reviewerId, teamId);
         return gradeMapper.toTeamGradeDTOList(grades);
     }
 
@@ -124,7 +110,6 @@ public class GradeService {
         AssessmentEnum assessment = AssessmentEnum.valueOf(assessmentStr.toUpperCase());
         List<Grade> grades =
                 gradeRepository.findAllByTeamReviewer_TeamIdAndAssessmentId(teamId, assessment.getInstanceId());
-
         return gradeMapper.toTeamGradeDTOList(grades);
     }
 }
